Что нового
==========

2014-06-03 версия 0.3
---------------------
Добавлен консольный компилятор и декомпилятор для файлов SCRIPT.DAT, 
  BACKGRND.BG, DIALOGUE.FIX, DIALOGUE.FIX
Выполнен рефакторинг кода
Обновлена справка

2014-05-23 версия 0.2o
----------------------
Исправление ошибки при открытии ресурса.

2014-05-21 версия 0.2n
----------------------
Функуция транслитерации заменена на собственную.

2014-05-21 версия 0.2m
----------------------
Добавлено отображение точек входа на сцену из других сцен (BGS.INI)
Исправлена загрузка файла BGS.INI из STR файла
Добавлена функция сохранения шаблона перевода в транслите (Теперь можно сразу 
оценить где перевод может быть выполнен).

2014-05-20 версия 0.2l
----------------------
Добавлена функция создания шаблона для перевода (.pot)
Добавлена загрузка перевода (.po)
Изменены все разделы где может отображаться переведённа информация
Изменен порядок загрузки данных из командной строки

2014-05-16 версия 0.2k
----------------------
Отображает информацию где используется объект с указанием опкодов и 
  обработчиков

2014-05-16 версия 0.2j
----------------------
Отображаемые цвета изображаются нужным цветом

2014-05-16 версия 0.2i
----------------------
Доработана справочная система.
Добработан вывод информации о опкодах в диалогах
Доработана подсветка комментариев

2014-05-16 версия 0.2g
----------------------
Добавлено отображение позиции дилоговых опкодов в общем блоке кода

2014-05-16 версия 0.2f
----------------------
Подсказка при декодировании опкода 8 в дилогах

2014-05-16 версия 0.2e
----------------------
Исправления на странице Support
Добавлена справка по программе
Добавлен выбор раздела из командной строки

2014-05-16 версия 0.2d
----------------------
Исправления на странице Support
Добавлена кнопка "Fix Paths" - исправление путей когда загружена только одна 
  часть

2014-05-16 версия 0.2c
----------------------
Исправления на странице Support

2014-05-16 версия 0.2b
----------------------