@@ -45,7 +45,9 @@ ON \<код операции\> \<идентификатор объекта\> [\<
   [список - DLG]
 ENDON
 
-Код операции - код операции (см. <a href="/help/comp_scr">Синтаксис компиляции SCRIPT.DAT</a>).
+Код операции - код операции при выполнении которой будет выполнен обработчик
+ (см. <a href="/help/comp_scr">Синтаксис компиляции SCRIPT.DAT</a>).
+Также есть специальный код 0xFFFE.
 
 Идентификатор объекта - идентификатор объекта к которому была применена 
 операция.
@@ -55,10 +57,10 @@ ENDON
 
 <u>DLG</u>
 
-DLGSET [\<аргумент 1\> [\<аргумент 2\>]]
+DLG [\<аргумент 1\> [\<аргумент 2\>]]
   [операции]
   [\<метка перехода\>:]
-ENDDLGSET
+ENDDLG
 
 Аргументы - число от 0 до 0xffffffff. Аргументы могут отутствовать, в этом 
 случае они будут заменены 0.
@@ -74,12 +76,12 @@ ENDDLGSET
 
 Операции:
 
- * BREAK
- * MENU
- * GOTO
- * MENURET
- * RETURN
- * PLAY
- * CIRCLE
+ * 1 - BREAK
+ * 2 - MENU
+ * 3 - GOTO
+ * 4 - MENURET
+ * 6 - RETURN
+ * 7 - PLAY
+ * 8 - CIRCLE
  * число 0..0xff
 
