@@ -7,6 +7,9 @@
   BACKGRND.BG, DIALOGUE.FIX, DIALOGUE.FIX
 Выполнен рефакторинг кода
 Обновлена справка
+Добавлено сохранение переведённых DIALOGUE.LOD (субтитры) и NAMES.INI (надписи)
+Исправлено сохранение шаблонов для перевода в транслите (буквы "а" и "Э")
+Если перевод загружен - то сообщения в списке тоже будут переведены.
 
 2014-05-23 версия 0.2o
 ----------------------
@@ -14,7 +17,7 @@
 
 2014-05-21 версия 0.2n
 ----------------------
-Функуция транслитерации заменена на собственную.
+Функция транслитерации заменена на собственную.
 
 2014-05-21 версия 0.2m
 ----------------------
